Fixed small alignment issues

--- a/PhotoshopWebsite/Bootstrap/Content/Custom.css
+++ b/PhotoshopWebsite/Bootstrap/Content/Custom.css
@@ -1,6 +1,6 @@
 ﻿.panel-bodybefore{
    width:100%;
-   margin-left: 20%; 
+   margin-left: 18%; 
 }
 .panel-body{
    width:100%;
